--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -11,3 +11,5 @@ body {
 h1 {
     text-align: center;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
